[gd_scene load_steps=7 format=2]

[ext_resource path="res://core/game_stages/LobbyStage.gd" type="Script" id=1]
[ext_resource path="res://core/ui/fonts/Montserrat-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://core/game_stages/common/GameStage.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/game_stages/common/PlayerIconDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://memes/player/PlayerIcon.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[node name="LobbyStage" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="JoinInformationLabel" type="Label" parent="." index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 643.0
margin_top = 341.0
margin_right = 1275.0
margin_bottom = 441.0
custom_fonts/font = SubResource( 1 )
text = "Connecting to server..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerIconDisplay" parent="." index="2" instance=ExtResource( 4 )]
position = Vector2( 960, 540 )
player_icon_scene = ExtResource( 5 )
margin_x = 0.221
margin_y = 0.256
type = 0

[node name="QrCodeTextureRect" type="TextureRect" parent="." index="5"]
margin_left = 834.951
margin_top = 456.119
margin_right = 1084.95
margin_bottom = 706.119
rect_pivot_offset = Vector2( 0.5, 0.5 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}
